Bug 100452 - push_constants host memory leak when resetting command buffer
Summary: push_constants host memory leak when resetting command buffer
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-29 15:52 UTC by Craig Stout
Modified: 2017-03-29 21:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch (1.40 KB, text/plain)
2017-03-29 15:52 UTC, Craig Stout
Details

Description Craig Stout 2017-03-29 15:52:35 UTC
Created attachment 130535 [details]
patch

Memory for push_constants never freed, see attached fix from branch 13.0.3.
Comment 1 Jason Ekstrand 2017-03-29 16:00:49 UTC
Please send patches to the mailing list rather than attaching them to bugs.  The mesa project uses a mailing-list based patch review process.  :-)
Comment 2 Jason Ekstrand 2017-03-29 21:34:28 UTC
Fixed by the following commit in master:

commit 1da7a11de8113932871487efaeb2674a3d1c644a
Author: Craig Stout <cstout@google.com>
Date:   Wed Mar 29 12:14:30 2017 -0700

    anv/cmd_buffer: fix host memory leak
    
    push_constants must be free'd.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100452
    Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>
    Cc: "17.0 13.0" <mesa-stable@lists.freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.